--- a/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li>@Html.ActionLink("Characters", "Index", "Character")</li>
-                        <liu>@Html.ActionLink("Combats", "Index", "Combat")</liu>
+                        <li>@Html.ActionLink("Combats", "Index", "Combat")</li>
                     }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
