--- a/DMCombatScreen.WebMVC/Views/Attendance/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Attendance/Index.cshtml
@@ -43,11 +43,11 @@
                 @Html.DisplayFor(modelItem => item.Character.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Combat.Name);
+                @Html.DisplayFor(modelItem => item.Combat.Name)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Detail", "Details", new { id = item.ID }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.ID })
             </td>
         </tr>
