tweaks to attendance create, edit, and detail to handle currentHP

--- a/DMCombatScreen.WebMVC/Views/Attendance/Details.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Attendance/Details.cshtml
@@ -25,7 +25,16 @@
         <dd>
             @Html.DisplayFor(model => model.CharacterName)
         </dd>
+@if (Model.CurrentHP != null)
+{
+        <dt>
+            @Html.DisplayNameFor(model => model.CurrentHP)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.CurrentHP)
+        </dd>
+}
         <dt>
             @Html.DisplayNameFor(model => model.CombatID)
         </dt>
