--- a/DMCombatScreen.WebMVC/Views/Attendance/Edit.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Attendance/Edit.cshtml
@@ -30,7 +30,16 @@
                 @Html.ValidationMessageFor(model => model.Combat.Name, "", new { @class = "text-danger" })
             </div>
         </div>
-
+    @*@if(Model.CurrentHP != null)
+    {
+        <div class="form-group">
+            @Html.LabelFor(model => model.CurrentHP, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.CurrentHP, "", new { @class = "control-label col-md-2" })
+                @Html.ValidationMessageFor(model => model.CurrentHP, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    }*@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
