--- a/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                         <li>@Html.ActionLink("Characters", "Index", "Character")</li>
                         <li>@Html.ActionLink("Combats", "Index", "Combat")</li>
                         <li>@Html.ActionLink("Encounters", "Index", "Attendance")</li>
+                        <li>@Html.ActionLink("Run Combat", "Index", "RunCombat")</li>
                     }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
