--- a/DMCombatScreen.WebMVC/Views/RunCombat/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/Index.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.CombatID)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Combat.Name)
+            @Html.DisplayNameFor(model => model.CombatName)
         </th>
         <th></th>
     </tr>
@@ -26,13 +26,13 @@
             @Html.DisplayFor(modelItem => item.CombatID)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Combat.Name)
+            @Html.DisplayFor(modelItem => item.CombatName)
         </td>
         <td>
             @Html.ActionLink("Roll Initiative", "RollInitiative", new { id=item.CombatID }) |
             @Html.ActionLink("See Combatants", "Detail", new { id=item.CombatID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID }) |
             @Html.ActionLink("Run Combat", "RunCombat", new { id=item.CombatID })
+            @*@Html.ActionLink("Delete", "Delete", new { id=item.ID }) |*@
         </td>
     </tr>
 }
