--- a/DMCombatScreen.WebMVC/Views/RunCombat/RollInitiative.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/RollInitiative.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DMCombatScreen.Models.RunCombatDetail>
+﻿@model List<DMCombatScreen.Models.RunCombatInitiative>
 
 @{
     ViewBag.Title = "RollInitiative";
@@ -18,7 +18,7 @@
                 @Html.DisplayNameFor(model => Model[0].CombatID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => Model[0].Character.Name)
+                @Html.DisplayNameFor(model => Model[0].CharacterName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => Model[0].InitiativeEntry)
@@ -28,25 +28,30 @@
             </th>
         </tr>
 
-        @for (int i = 0; i < Model.Count(); i++)
+        @for (int i = 0; i < Model.Count(); i++ )
         {
             @Html.HiddenFor(model => model[i].ID)
-            @Html.HiddenFor(model => model[i].CombatID)
             @Html.HiddenFor(model => model[i].CharacterID)
+            @Html.HiddenFor(model => model[i].CharacterName)
+            @Html.HiddenFor(model => model[i].CombatID)
+            @Html.HiddenFor(model => model[i].CombatName)
+            @Html.HiddenFor(model => model[i].IsPlayer)
+            @Html.HiddenFor(model => model[i].InitiativeAbilityScore)
+            @Html.HiddenFor(model => model[i].InitiativeModifier)
             <tr>
                 <td>
                     @Html.DisplayFor(model => model[i].CombatID)
                 </td>
                 <td>
-                    @Html.DisplayFor(model => model[i].Character.Name)
+                    @Html.DisplayFor(model => model[i].CharacterName)
                 </td>
 
                 <td>
                     @Html.EditorFor(model => model[i].InitiativeEntry)
-                    @Html.ValidationMessageFor(model => model[i].CurrentInitiative, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model[i].InitiativeEntry, "", new { @class = "text-danger" })
                 </td>
 
-                @if (!Model[i].Character.IsPlayer)
+                @if (!Model[i].IsPlayer)
                 {
                     <td>
                         @Html.EditorFor(model => model[i].CurrentHP)
