--- a/DMCombatScreen.WebMVC/Views/Combat/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Combat/Index.cshtml
@@ -44,7 +44,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.CombatID }) |
-                @Html.ActionLink("Add Characters", "Create", "Attendance", new { id = item.CombatID }, null) |
+                @Html.ActionLink("Add Characters", "CreateMultiple", "Attendance", new { id = item.CombatID }, null) |
                 @Html.ActionLink("Details", "Details", new { id = item.CombatID }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.CombatID })
             </td>
