search added to encounters page, view routing changes

--- a/DMCombatScreen.WebMVC/Views/Attendance/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Attendance/Index.cshtml
@@ -20,6 +20,14 @@
     </div>
 }
 
+@using (Html.BeginForm())
+{
+    <p>
+        Search by Character or Combat Name: @Html.TextBox("SearchString")
+        <input type="submit" value="Search" />
+    </p>
+}
+
 <table class="table">
     <tr>
         <th>
