updated page headings

--- a/DMCombatScreen.WebMVC/Views/Attendance/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Attendance/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Encounter Attendance</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add a new Character to a Combat", "Create")
 </p>
 
 @if (TempData.ContainsKey("SaveResult"))
