--- a/DMCombatScreen.WebMVC/Views/Combat/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Combat/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Combats</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New Combat", "Create")
 </p>
 
 @if (TempData.ContainsKey("SaveResult"))
