--- a/DMCombatScreen.WebMVC/Views/Attendance/CreateMultiple.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Attendance/CreateMultiple.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>AttendanceAddCharacter</h4>
+
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -24,10 +24,10 @@
 
         <div class="form-group">
             <div class="col-md-10">
-                <table class="table">
+                <table class="table" id = "checkbox-container">
                     <tr>
                         <th></th>
-                        <th> Character Name</th>
+                        <th>@Html.ActionLink("Character Name", "CreateMultiple", new { sortOrder = ViewBag.NameSortParam })</th>
                         <th>Number to add</th>
                     </tr>
 
@@ -38,10 +38,10 @@
                             @Html.HiddenFor(m => Model.CharacterList[i].CharacterName)
                             <tr>
                                 <td>
-                                    @Html.CheckBoxFor(m => Model.CharacterList[i].IsChecked)
+                                    @Html.CheckBoxFor(m => Model.CharacterList[i].IsChecked, htmlAttributes: new { id = Model.CharacterList[i].CharacterID, value = Model.CharacterList[i].CharacterID })
                                 </td>
                                 <td>
-                                    @Model.CharacterList[i].CharacterName
+                                    @Html.LabelFor(m => Model.CharacterList[i].IsChecked, Model.CharacterList[i].CharacterName)
                                 </td>
                                 <td>
                                     @Html.EditorFor(m => Model.CharacterList[i].NumberOfAttendances)
@@ -67,4 +67,21 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        var checkboxValues = JSON.parse(localStorage.getItem('checkboxValues')) || {},
+            $checkboxes = $("#checkbox-container :checkbox");
+
+        $checkboxes.on("change", function () {
+            $checkboxes.each(function () {
+                checkboxValues[this.value] = this.checked;
+            });
+
+            localStorage.setItem("checkboxValues", JSON.stringify(checkboxValues));
+        });
+
+        // On page load
+        $.each(checkboxValues, function (key, value) {
+            $("#" + key).prop('checked', value);
+        });
+    </script>
 }
