updated character views to use character type enum

--- a/DMCombatScreen.WebMVC/Views/Character/Details.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Details.cshtml
@@ -52,6 +52,15 @@
                 @Html.DisplayFor(model => model.InitiativeAbilityScore)
             </dd>
         }
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CharacterType)
+        </dt>
+        
+        <dd>
+            @Html.DisplayFor(model => model.CharacterType)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.IsPlayer)
         </dt>
