--- a/DMCombatScreen.WebMVC/Views/Character/Create.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Create.cshtml
@@ -46,6 +46,14 @@
                 @Html.ValidationMessageFor(model => model.InitiativeAbilityScore, "", new { @class = "text-danger" })
             </div>
         </div>
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.CharacterType, htmlAttributes: new { @class = "control-label col-md-2"})
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.CharacterType, EnumHelper.GetSelectList(typeof(DMCombatScreen.Data.CharacterType)), new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CharacterType, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.IsPlayer, htmlAttributes: new { @class = "control-label col-md-2" })
