--- a/DMCombatScreen.WebMVC/Views/Character/Delete.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Delete.cshtml
@@ -52,6 +52,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.CharacterType)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CharacterType)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.IsPlayer)
         </dt>
 
