--- a/DMCombatScreen.WebMVC/Views/Character/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Index.cshtml
@@ -38,7 +38,7 @@
             @Html.ActionLink("Character Name", "Index", new { sortOrder = ViewBag.NameSortParam })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CharacterType)
+            @Html.ActionLink("Character Type", "Index", new { sortOrder = ViewBag.TypeSortParam })
         </th>
         <th>
             @Html.ActionLink("Is Player", "Index", new { sortOrder = ViewBag.PlayerSortParam })
