condition crud completed

--- a/DMCombatScreen.WebMVC/Views/Condition/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Condition/Index.cshtml
@@ -30,7 +30,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id = item.ConditionID }) |
-            @Html.ActionLink("Details", "Details", new { id = item.ConditionID }) |
+            @Html.ActionLink("Details", "Detail", new { id = item.ConditionID }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.ConditionID })
         </td>
     </tr>
