added post methods + services for runcombat conditions

--- a/DMCombatScreen.WebMVC/Views/RunCombat/RunCombat.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/RunCombat.cshtml
@@ -53,7 +53,7 @@
             <td>
                 @foreach (var condition in item.Conditions)
                 {
-                    @Html.Display(condition)
+                    <p>@Html.Display(condition)</p>
                 }
             </td>
 
