--- a/DMCombatScreen.WebMVC/Views/RunCombat/EditCondition.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/EditCondition.cshtml
@@ -43,9 +43,15 @@
                 </table>
             </div>
         </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+        </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "RunCombat", new { id = Model.CombatID, SelectedCharacter = Model.CurrentTurn })
+    @Html.ActionLink("Back to List", "RunCombat", new { id = Model.CombatID, SelectedCharacter = Model.CurrentTurn - 1 })
 </div>
