finished adding condition editing in combat view

--- a/DMCombatScreen.WebMVC/Views/RunCombat/RunCombat.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/RunCombat.cshtml
@@ -53,7 +53,7 @@
             <td>
                 @foreach (var condition in item.Conditions)
                 {
-                    <p>@Html.Display(condition)</p>
+                    <p>@condition</p>
                 }
             </td>
 
